fix: Support user provided Go binary dir path
Defaults to '.' if not set.
